Bug#37066 Valgrind error in test gis-rtree.test         when check_quick_select returns HA_POS_ERROR,         the 'cost' parameter isn't touched in most cases         thus contains garbage. That's why valgrind complains.         Fixed - use the 'cost' only if noerror retured

per-file messages:
  sql/opt_range.cc
Bug#37066 Valgrind error in test gis-rtree.test
        don't calculate found_read_time if HA_POS_ERROR
Original revid:holyfoot@mysql.com-20090624105541-pw2zagi5xijlt1gj